[package]
name = "geng-web-audio-api-example"
version = "0.1.0"
authors = ["kuviman"]
edition = "2021"
publish = false

[dependencies]
geng-web-audio-api = { path = ".." }
futures = "0.3"
batbox-time = "0.16"
batbox-file = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Document"] }
wasm-bindgen = "0.2"
